fix: code highlight was broken on Hugo v0.60.*
- removed even's own code highlighting lines
- relying on hugo v0.60.~ markdown handler: https://github.com/yuin/goldmark

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -188,80 +188,6 @@ $content-blockquote-border-left: 3px solid rgba($theme-color, 0.3) !default;
 // Border color of the table.
 $content-table-border-color: darken($deputy-color, 3%) !default;
 
-// ========== Code ========== //
-// Color of the code.
-$code-color: #c7254e !default;
-
-// Font size of code.
-$code-font-size: 0.9em !default;
-
-// Font family of the code.
-$code-font-family: Consolas, Monaco, Menlo, "DejaVu Sans Mono",
- "Bitstream Vera Sans Mono", "Courier New", monospace !default;
-
-// Color of code highlight, solarized.
-$code-highlight-color: (
-  comment: #93a1a1,
-  keyword: #859900,
-  number: #2aa198,
-  title: #268bd2,
-  attribute: #b58900,
-  symbol: #cb4b16,
-  built_in: #dc322f,
-  formula: #eee8d5
-) !default;
-
-// Code type list.
-$code-type-list: (
-  // Custom code type
-  language-bash: "Bash",
-  language-c: "C",
-  language-cs: "C#",
-  language-cpp: "C++",
-  language-css: "CSS",
-  language-coffeescript: "CoffeeScript",
-  language-html: "HTML",
-  language-xml: "XML",
-  language-http: "HTTP",
-  language-json: "JSON",
-  language-java: "Java",
-  language-js: "JavaScript",
-  language-javascript: "JavaScript",
-  language-makefile: "Makefile",
-  language-markdown: "Markdown",
-  language-objectivec: "Objective-C",
-  language-php: "PHP",
-  language-perl: "Perl",
-  language-python: "Python",
-  language-ruby: "Ruby",
-  language-sql: "SQL",
-  language-shell: "Shell",
-
-  language-erlang: "Erlang",
-  language-go: "Go",
-  language-go-html-template: "Go HTML Template",
-  language-groovy: "Groovy",
-  language-haskell: "Haskell",
-  language-kotlin: "Kotlin",
-  language-clojure: "Clojure",
-  language-less: "Less",
-  language-lisp: "Lisp",
-  language-lua: "Lua",
-  language-matlab: "Matlab",
-  language-rust: "Rust",
-  language-scss: "Scss",
-  language-scala: "Scala",
-  language-swift: "Swift",
-  language-typescript: "TypeScript",
-  language-yml: "YAML",
-  language-yaml: "YAML",
-  language-toml: "TOML",
-  language-diff: "Diff"
-) !default;
-
-// Color of the code background.
-$code-background: $deputy-color !default;
-
 
 // ========== Pagination ========== //
 // Margin of the pagination.
